NU-28 comment: fixed cart image width, image block extra space, radio-box postition on pdp, error text position under inputs

--- a/app/design/frontend/Bangkok/default/Magento_Customer/web/css/source/_module.less
+++ b/app/design/frontend/Bangkok/default/Magento_Customer/web/css/source/_module.less
@@ -169,7 +169,7 @@
         }
       }
       .nu-points-link {
-        text-transform: inherit;
+        text-transform: inherit !important;
       }
       .open-account-details {
         text-transform: uppercase;
